--- a/Final/Bookshelf/templates/includes/sidebar.html
+++ b/Final/Bookshelf/templates/includes/sidebar.html
@@ -4,7 +4,7 @@
     <div class="col-md-2 sidebar py-3"> <!-- Sidebar s hnědým pozadím -->
       <ul class="nav flex-column">
         <li class="nav-item"><a href="{% url 'book-list' %}" class="nav-link text-white">📚 Knihy</a></li>
-        <li class="nav-item"><a href="{% url 'authors-list' %}" class="nav-link text-white">🧑‍💼 Autoři</a></li>
+        <li class="nav-item"><a href="{% url 'authors-list' %}" class="nav-link text-white">🧑‍ Autoři</a></li>
         <li class="nav-item"><a href="{% url 'genres' %}" class="nav-link text-white">📚 Žánry</a></li>
         <li class="nav-item"><a href="{% url 'books-wishlist' %}" class="nav-link text-white">📌 Wishlist</a></li>
         <li class="nav-item"><a href="{% url 'books-read' %}" class="nav-link text-white">✅ Přečtené</a></li>
