--- a/Final/Bookshelf/templates/authors/author_list.html
+++ b/Final/Bookshelf/templates/authors/author_list.html
@@ -2,14 +2,22 @@
 {% block title %}Autoři{% endblock %}
 {% block content %}
 <h2>📚 Autoři</h2>
-<ul class="list-group">
+
+<div class="row">
     {% for author in authors %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            <a href="{% url 'books-by-author' author.author %}">{{ author.author }}</a>
+    <div class="col-6 col-md-2 mb-3">  <!-- 6 autorů na větších obrazovkách -->
+        <!-- Odkaz obklopující celé pole -->
+        <a href="{% url 'books-by-author' author.author %}" class="card-item">
+            <div class="author-name">{{ author.author }}</div>
             <span class="badge bg-primary rounded-pill">{{ author.book_count }}</span>
-        </li>
+        </a>
+    </div>
     {% empty %}
-        <li class="list-group-item">Žádní autoři</li>
+    <div class="col-12">
+        <div class="author-card p-3 text-center">
+            <span class="badge bg-muted">Žádní autoři</span>
+        </div>
+    </div>
     {% endfor %}
-</ul>
+</div>
 {% endblock %}
