--- a/Final/Bookshelf/templates/books/wishlist.html
+++ b/Final/Bookshelf/templates/books/wishlist.html
@@ -7,36 +7,38 @@
 
 <div class="row">
     {% for book in books %}
-        <div class="col-md-3 mb-3">
-            <div class="card h-100">
-                {% if book.cover_image %}
-                    <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}">
-                {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                            {{ book.title }}
-                        </a>
-                    </h5>
-                    <p class="card-text">{{ book.author }}</p>
-                    {% if book.avg_rating %}
-                        {% with book.avg_rating|floatformat:0 as stars %}
-                            <p class="text-warning mb-0">
-                                {% for i in "12345" %}
-                                    {% if forloop.counter <= stars|add:"0" %}
-                                        ⭐
-                                    {% else %}
-                                        ☆
-                                    {% endif %}
-                                {% endfor %}
-                                ({{ book.avg_rating|floatformat:1 }}★)
-                            </p>
-                        {% endwith %}
-                    {% else %}
-                        <p class="text-muted">Zatím nehodnoceno</p>
+        <div class="col-6 col-md-3 mb-3"> <!-- 4 položky na řádku -->
+            <a href="{% url 'book-detail' book.pk %}" class="card-item">
+                <div class="card h-100">
+                    <!-- Obrázek knihy -->
+                    {% if book.cover_image %}
+                        <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}">
                     {% endif %}
+                    <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                        <!-- Název knihy -->
+                        <div class="item-name">{{ book.title }}</div>
+                        <!-- Autor -->
+                        <div class="item-author">{{ book.author }}</div>
+                        <!-- Hodnocení -->
+                        {% if book.avg_rating %}
+                            <div class="item-rating">
+                                {% with book.avg_rating|floatformat:0 as stars %}
+                                    {% for i in "12345" %}
+                                        {% if forloop.counter <= stars %}
+                                            ⭐
+                                        {% else %}
+                                            ☆
+                                        {% endif %}
+                                    {% endfor %}
+                                    ({{ book.avg_rating|floatformat:1 }}★)
+                                {% endwith %}
+                            </div>
+                        {% else %}
+                            <div class="item-rating text-muted">Zatím nehodnoceno</div>
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>
     {% empty %}
         <p class="text-muted">Nemáte žádné knihy ve wishlistu.</p>
