--- a/Final/Bookshelf/templates/authors/author_list.html
+++ b/Final/Bookshelf/templates/authors/author_list.html
@@ -9,7 +9,7 @@
         <!-- Odkaz obklopující celé pole -->
         <a href="{% url 'books-by-author' author.author %}" class="card-item">
             <div class="author-name">{{ author.author }}</div>
-            <span class="badge bg-primary rounded-pill">{{ author.book_count }}</span>
+            <span class="badge bg-secondary rounded-pill">{{ author.book_count }}</span>
         </a>
     </div>
     {% empty %}
