--- a/Final/Bookshelf/templates/authors/author_list.html
+++ b/Final/Bookshelf/templates/authors/author_list.html
@@ -3,9 +3,10 @@
 {% block content %}
 <h2>📚 Autoři</h2>
 
+
 <div class="row">
     {% for author in authors %}
-    <div class="col-6 col-md-2 mb-3">  <!-- 6 autorů na větších obrazovkách -->
+    <div class="col-6 col-md-2">  <!-- 6 autorů na větších obrazovkách -->
         <!-- Odkaz obklopující celé pole -->
         <a href="{% url 'books-by-author' author.author %}" class="card-item">
             <div class="author-name">{{ author.author }}</div>
