--- a/Final/Bookshelf/templates/books/create_tag.html
+++ b/Final/Bookshelf/templates/books/create_tag.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
+
 {% block title %}Vytvořit štítek{% endblock %}
+
 {% block content %}
 <h2>➕ Vytvořit štítek</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Uložit</button>
+    <div class="form-group">
+        <label for="{{ form.name.id_for_label }}">Štítek</label>
+        <!-- Přidání vlastní třídy přímo do pole -->
+        <input type="text" name="name" id="{{ form.name.id_for_label }}" class="form-control custom-width" value="{{ form.name.value }}">
+    </div>
+    <button type="submit" class="btn btn-primary mt-3">Uložit</button>
 </form>
 {% endblock %}
