--- a/Final/Bookshelf/templates/books/my_library.html
+++ b/Final/Bookshelf/templates/books/my_library.html
@@ -8,16 +8,14 @@
 
 <div class="row">
     {% for book in books %}
-        <div class="col-md-3 mb-3">
-            <div class="card h-100">
+        <div class="col-md-4 mb-3"> <!-- Změněno na col-md-4 pro 3 karty na řádku -->
+            <a href="{% url 'book-detail' book.pk %}" class="book-card"> <!-- Přebíráme book-card třídu -->
                 {% if book.cover_image %}
                     <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}">
                 {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">
-                        <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                            {{ book.title }}
-                        </a>
+                        {{ book.title }}
                     </h5>
                     <p class="card-text">{{ book.author }}</p>
                     {% if book.avg_rating %}
@@ -37,7 +35,7 @@
                         <p class="text-muted">Zatím nehodnoceno</p>
                     {% endif %}
                 </div>
-            </div>
+            </a>
         </div>
     {% empty %}
         <p class="text-muted">Zatím nemáte označené žádné knihy.</p>
