--- a/Final/Bookshelf/templates/books/read_books.html
+++ b/Final/Bookshelf/templates/books/read_books.html
@@ -7,23 +7,22 @@
 
 <div class="row">
     {% for book in books %}
-        <div class="col-md-3 mb-3">
-            <div class="card h-100">
+        <div class="col-md-3 mb-3"> <!-- 4 položky na řádku -->
+            <a href="{% url 'book-detail' book.pk %}" class="book-card"> <!-- Přebíráme book-card třídu -->
                 {% if book.cover_image %}
                     <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}">
                 {% endif %}
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                            {{ book.title }}
-                        </a>
-                    </h5>
+                <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                    <!-- Název knihy -->
+                    <h5 class="card-title">{{ book.title }}</h5>
+                    <!-- Autor -->
                     <p class="card-text">{{ book.author }}</p>
+                    <!-- Hodnocení -->
                     {% if book.avg_rating %}
-                        {% with book.avg_rating|floatformat:0 as stars %}
-                            <p class="text-warning mb-0">
+                        <p class="text-warning mb-0">
+                            {% with book.avg_rating|floatformat:0 as stars %}
                                 {% for i in "12345" %}
-                                    {% if forloop.counter <= stars|add:"0" %}
+                                    {% if forloop.counter <= stars %}
                                         ⭐
                                     {% else %}
                                         ☆
@@ -36,7 +35,7 @@
                         <p class="text-muted">Zatím nehodnoceno</p>
                     {% endif %}
                 </div>
-            </div>
+            </a>
         </div>
     {% empty %}
         <p class="text-muted">Zatím nemáte žádné přečtené knihy.</p>
