--- a/Final/Bookshelf/templates/books/tag_list.html
+++ b/Final/Bookshelf/templates/books/tag_list.html
@@ -10,7 +10,7 @@
 {% endif %}
 
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         {% for tag in tags %}
         <div class="col-6 col-md-2 mb-3"> <!-- 6 štítků na větších obrazovkách -->
