--- a/Final/Bookshelf/templates/books/add_book.html
+++ b/Final/Bookshelf/templates/books/add_book.html
@@ -48,9 +48,9 @@
       <label class="form-label">Štítky</label>
       <div>
         {% for checkbox in form.tags %}
-          <div class="form-check form-check-inline">
-            {{ checkbox.tag }}
-            <label for="{{ checkbox.id_for_label }}" class="form-check-label ms-1">
+          <div class="form-check form-check-inline custom-checkbox">
+              <input type="checkbox" name="{{ checkbox.name }}" id="{{ checkbox.id_for_label }}"
+                    value="{{ checkbox.choice_value }}" class="form-check-input">
               {{ checkbox.choice_label }}
             </label>
           </div>
@@ -59,6 +59,6 @@
     </div>
 
 
-  <button type="submit" class="btn btn-success">Uložit</button>
+  <button type="submit" class="btn btn-success">Uložit knihu</button>
 </form>
 {% endblock %}
