--- a/Final/Bookshelf/templates/books/create_tag.html
+++ b/Final/Bookshelf/templates/books/create_tag.html
@@ -11,6 +11,6 @@
         <!-- Přidání vlastní třídy přímo do pole -->
         <input type="text" name="name" id="{{ form.name.id_for_label }}" class="form-control custom-width" value="{{ form.name.value }}">
     </div>
-    <button type="submit" class="btn btn-primary mt-3">Uložit</button>
+    <button type="submit" class="btn btn-success mt-3">Uložit štítek</button>
 </form>
 {% endblock %}
