--- a/Final/Bookshelf/templates/home_authenticated.html
+++ b/Final/Bookshelf/templates/home_authenticated.html
@@ -12,17 +12,16 @@
   <div class="row">
     {% for book in recently_added_books %}
       <div class="col-md-3 mb-3">
-        <div class="card h-100">
+        <!-- Přebírání book-card CSS pro zobrazení karet -->
+        <a href="{% url 'book-detail' book.pk %}" class="book-card">
           {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
-                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}" style="width: 100%; height: 200px; object-fit: cover;">
           {% endif %}
           <div class="card-body">
-            <h5 class="card-title">{{ book.title }}</h5>
-            <p class="card-text">{{ book.author }}</p>
-            <a href="{% url 'book-detail' book.pk %}" class="btn btn-sm btn-primary">Detail</a>
+            <h5 class="book-title">{{ book.title }}</h5>
+            <p class="book-author">{{ book.author }}</p>
           </div>
-        </div>
+        </a>
       </div>
     {% empty %}
       <p class="text-muted">Žádné nové knihy.</p>
@@ -35,32 +34,30 @@
   <div class="row">
     {% for book in recently_read %}
       <div class="col-md-3 mb-3">
-        <div class="card h-100">
-          {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
-                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
-          {% endif %}
-          <div class="card-body">
-            <h5 class="card-title">
-              <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
-                {{ book.title }}
-              </a>
-            </h5>
-            <p class="card-text">{{ book.author }}</p>
-            {% with book.avg_rating|default:0|floatformat:0 as rating_value %}
-              <p class="text-warning mb-0">
-                {% for i in "12345" %}
-                  {% if forloop.counter <= rating_value|add:"0" %}
-                    ⭐
-                  {% else %}
-                    ☆
-                  {% endif %}
-                {% endfor %}
-                ({{ book.avg_rating|floatformat:1 }}★)
-              </p>
-            {% endwith %}
+        <a href="{% url 'book-detail' book.pk %}" class="book-card">
+          <div class="card h-100">
+            {% if book.cover_image %}
+              <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                   style="width: 100%; height: 200px; object-fit: cover;">
+            {% endif %}
+            <div class="card-body">
+              <h5 class="book-title">{{ book.title }}</h5>
+              <p class="book-author">{{ book.author }}</p>
+              {% with book.avg_rating|default:0|floatformat:0 as rating_value %}
+                <p class="text-warning mb-0">
+                  {% for i in "12345" %}
+                    {% if forloop.counter <= rating_value|add:"0" %}
+                      ⭐
+                    {% else %}
+                      ☆
+                    {% endif %}
+                  {% endfor %}
+                  ({{ book.avg_rating|floatformat:1 }}★)
+                </p>
+              {% endwith %}
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     {% empty %}
       <p class="text-muted">Žádné knihy</p>
@@ -68,18 +65,19 @@
   </div>
 </div>
 
+
 <div class="mt-4">
   <h4>📌 Chystám se číst <a href="{% url 'books-wishlist' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
   <div class="row">
     {% for book in to_read %}
       <div class="col-md-3 mb-3">
-        <div class="card h-100">
-          {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
-                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
-          {% endif %}
-          <div class="card-body">
-            <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
+        <a href="{% url 'book-detail' book.pk %}" class="book-card"> <!-- Přidání book-card třídy -->
+          <div class="card h-100">
+            {% if book.cover_image %}
+              <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                   style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+            {% endif %}
+            <div class="card-body">
               <h5 class="card-title">{{ book.title }}</h5>
               <p class="card-text">{{ book.author }}</p>
               {% with book.avg_rating|default:0|floatformat:0 as rating_value %}
@@ -94,9 +92,9 @@
                   ({{ book.avg_rating|floatformat:1 }}★)
                 </p>
               {% endwith %}
-            </a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     {% empty %}
       <p class="text-muted">Žádné knihy</p>
@@ -109,13 +107,13 @@
   <div class="row">
     {% for book in best_rated_books %}
       <div class="col-md-3 mb-3">
-        <div class="card h-100">
-          {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
-                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
-          {% endif %}
-          <div class="card-body">
-            <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
+        <a href="{% url 'book-detail' book.pk %}" class="book-card"> <!-- Přidání book-card třídy -->
+          <div class="card h-100">
+            {% if book.cover_image %}
+              <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                   style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+            {% endif %}
+            <div class="card-body">
               <h5 class="card-title">{{ book.title }}</h5>
               <p class="card-text">{{ book.author }}</p>
               {% if book.user_stars %}
@@ -132,9 +130,9 @@
               {% else %}
                 <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
               {% endif %}
-            </a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     {% empty %}
       <p class="text-muted">Zatím žádná hodnocení.</p>
@@ -142,18 +140,19 @@
   </div>
 </div>
 
+
 <div class="mt-4">
   <h4>💩 Moje nejhůře hodnocené <a href="{% url 'books-worst-rated' %}" class="btn btn-sm btn-link float-end">Zobrazit vše</a></h4>
   <div class="row">
     {% for book in worst_rated_books %}
       <div class="col-md-3 mb-3">
-        <div class="card h-100">
-          {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
-                 style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
-          {% endif %}
-          <div class="card-body">
-            <a href="{% url 'book-detail' book.pk %}" style="text-decoration: none; color: inherit;">
+        <a href="{% url 'book-detail' book.pk %}" class="book-card"> <!-- Přidání book-card třídy -->
+          <div class="card h-100">
+            {% if book.cover_image %}
+              <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}"
+                   style="width: 200px; height: 200px; object-fit: cover; margin: 0 auto;">
+            {% endif %}
+            <div class="card-body">
               <h5 class="card-title">{{ book.title }}</h5>
               <p class="card-text">{{ book.author }}</p>
               {% if book.user_stars %}
@@ -170,13 +169,14 @@
               {% else %}
                 <p class="text-muted mt-2 mb-0">Zatím nehodnoceno</p>
               {% endif %}
-            </a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     {% empty %}
       <p class="text-muted">Zatím žádná hodnocení.</p>
     {% endfor %}
   </div>
 </div>
+
 {% endblock %}
