--- a/Final/Bookshelf/templates/registration/register.html
+++ b/Final/Bookshelf/templates/registration/register.html
@@ -7,6 +7,6 @@
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Registrovat</button>
+    <button type="submit" class="btn btn-success">Registrovat</button>
 </form>
 {% endblock %}
