--- a/Final/Bookshelf/templates/authors/author_list.html
+++ b/Final/Bookshelf/templates/authors/author_list.html
@@ -3,6 +3,12 @@
 {% block content %}
 <h2>📚 Autoři</h2>
 
+<form method="get" class="mb-4">
+    <div class="input-group">
+        <input type="text" name="search" class="form-control custom-input" placeholder="Hledat autory..." value="{{ request.GET.search }}">
+        <button type="submit" class="btn btn-primary">Hledat</button>
+    </div>
+</form>
 
 <div class="row">
     {% for author in authors %}
