--- a/Final/Bookshelf/templates/includes/sidebar.html
+++ b/Final/Bookshelf/templates/includes/sidebar.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <!-- Levý panel -->
-    <div class="col-md-2 sidebar py-3"> <!-- Sidebar s hnědým pozadím -->
+    <div class="col-md-2 sidebar py-3">
       <ul class="nav flex-column">
         <li class="nav-item"><a href="{% url 'book-list' %}" class="nav-link text-white">📚 Knihy</a></li>
         <li class="nav-item"><a href="{% url 'authors-list' %}" class="nav-link text-white">🧑‍ Autoři</a></li>
