--- a/Final/Bookshelf/templates/registration/register.html
+++ b/Final/Bookshelf/templates/registration/register.html
@@ -9,17 +9,17 @@
 
     <div class="mb-3">
         <label for="{{ form.username.id_for_label }}" class="form-label">Uživatelské jméno</label>
-        {{ form.username }}  <!-- Formulář pro uživatelské jméno -->
+        {{ form.username }}
     </div>
 
     <div class="mb-3">
         <label for="{{ form.password1.id_for_label }}" class="form-label">Heslo</label>
-        {{ form.password1 }}  <!-- Formulář pro heslo -->
+        {{ form.password1 }}
     </div>
 
     <div class="mb-3">
         <label for="{{ form.password2.id_for_label }}" class="form-label">Potvrzení hesla</label>
-        {{ form.password2 }}  <!-- Formulář pro potvrzení hesla -->
+        {{ form.password2 }}
     </div>
 
     <button type="submit" class="btn btn-success">Registrovat</button>
