--- a/Final/Bookshelf/templates/authors/books_by_author.html
+++ b/Final/Bookshelf/templates/authors/books_by_author.html
@@ -5,19 +5,14 @@
 
 <div class="row">
     {% for book in books %}
-        <div class="col-md-3 mb-3"> <!-- 4 položky na řádku -->
-            <!-- Přebírání book-card CSS pro zobrazení karet -->
+        <div class="col-md-3 mb-3">
             <a href="{% url 'book-detail' book.pk %}" class="book-card">
                 <div class="card-body d-flex flex-column justify-content-center align-items-center">
-                    <!-- Obrázek knihy -->
                     {% if book.cover_image %}
                         <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}" style="width: 100%; height: 200px; object-fit: cover;">
                     {% endif %}
-                    <!-- Název knihy -->
                     <h5 class="book-title">{{ book.title }}</h5>
-                    <!-- Autor -->
                     <p class="book-author">{{ book.author }}</p>
-                    <!-- Hodnocení -->
                     {% if book.avg_rating %}
                         <div class="book-rating">
                            {% with book.avg_rating|floatformat:0 as stars %}
