--- a/Final/Bookshelf/templates/books/read_books.html
+++ b/Final/Bookshelf/templates/books/read_books.html
@@ -10,14 +10,12 @@
         <div class="col-md-3 mb-3">
             <a href="{% url 'book-detail' book.pk %}" class="book-card">
                 {% if book.cover_image %}
-                    <img src="{{ book.cover_image.url }}" class="card-img-top" alt="{{ book.title }}">
+                    <img src="{{ book.cover_image.url }}" class="card-img"">
                 {% endif %}
                 <div class="card-body text-center">
-                    <!-- Název knihy -->
                     <h5 class="card-title">{{ book.title }}</h5>
-                    <!-- Autor -->
                     <p class="card-text">{{ book.author }}</p>
-                    <!-- Hodnocení -->
+                    <p class="book-genre">{{ book.genre }}</p>
                     {% if book.avg_rating %}
                         {% with book.avg_rating|floatformat:0 as stars %}
                             <p class="text-warning mb-0">
